--- a/page.css
+++ b/page.css
@@ -1,1 +1,15 @@
 
+<style>
+    #page1 { /* ici on utilise l'id de l'iframe changer son style, display veut dire afficher et none c'est non, ducoup on la voit pas  */
+        display: none;
+    }
+    #page1:target { /* ici on utilise le :target pour afficher l'iframe (display: block) quand dans l'url il y a écrit #page1 d'où le #page1 dans le href */
+        display: block;
+    }
+    #page2 { /* ici on utilise l'id de l'iframe changer son style, display veut dire afficher et none c'est non, ducoup on la voit pas  */
+        display: none;
+    }
+    #page2:target { /* ici on utilise le :target pour afficher l'iframe (display: block) quand dans l'url il y a écrit #page2 d'où le #page2 dans le href */
+        display: block;
+    }
+</style>
